# unforget-embed

./: README.md  pyproject.toml
unforget_embed/: __init__.py  cli.py  server.py
