[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unforget-embed"
version = "0.2.0"
description = "Zero-config embedded Unforget server — PostgreSQL 17 + pgvector 0.8 + memory API, no setup required"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{ name = "Unforget", email = "team@unforget.sh" }]
dependencies = [
    "unforget[api]>=0.2.1",
    "pgbox>=0.1.0",
    "click>=8.0",
]

[project.scripts]
unforget-embed = "unforget_embed.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["unforget_embed"]
